--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
 
   kafka-producer:
     build:
-      context: ./application/kafka-producer
+      context: ./kafka-producer
     container_name: kafka-producer
     ports:
       - "8000:8000"
@@ -108,7 +108,7 @@ services:
 
   flink-processor:
     build:
-      context: ./application/flink-processor
+      context: ./flink-processor
       dockerfile: Dockerfile
     container_name: flink-processor
     ports:
@@ -131,7 +131,7 @@ services:
 
   postgres:
     build:
-      context: ./application/postgres
+      context: ./postgres
     container_name: postgres
     restart: unless-stopped
     environment:
