Add JSON Serialization for generated Plotly figures for 'Equator Charts'

--- a/configuration.yml
+++ b/configuration.yml
@@ -52,7 +52,7 @@ debugApi:
       displayLinearTrend: False
       displayLogarithmicTrend: True
       displayActualTrend: False
-      pngOutput: True
+      pngOutput: False
 
 realTimeProduction:
   cities:
