Successfully support all queries for equator charts

--- a/city-api/Dockerfile
+++ b/city-api/Dockerfile
@@ -24,7 +24,9 @@ RUN pip install --no-cache-dir \
     requests \
     docker \
     fastapi \
-    uvicorn
+    uvicorn \
+    statsmodels \
+    scipy
 
 # Copy city-api files
 COPY city-api/ ./city-api/
