Retrieve temperatures of the biggest cities by population within Sweden

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Get your API key from https://www.weatherapi.com/my
 WEATHER_API_KEY=your_api_key_here 
+
+# Get your API key from https://rapidapi.com/wirefreethought/api/geodb-cities
+GEODB_CITIES_API_KEY=your_api_key_here
