--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,6 +159,8 @@ services:
     ports:
       - "8003:8003"
     volumes:
+      - ./city-api:/app/city-api:rw
+      - .:/app:ro
       - ./city-api/generated-artifacts:/app/city-api/generated-artifacts
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
