Add feature of defining N cities to display for the client's selected country

--- a/configuration.yml
+++ b/configuration.yml
@@ -31,6 +31,8 @@ services:
     sampleDuration: 15
   kafkaProducer:
     requestInterval: 0.01
+  cityApi:
+    numberOfCitiesForSelectedCountry: 5
 visualizations:
   charts:
     equatorChart:
