Progress for adding 'dynamic cities' of the selected country to Kafka Logs

--- a/configuration.yml
+++ b/configuration.yml
@@ -33,6 +33,10 @@ services:
     requestInterval: 0.01
   cityApi:
     numberOfCitiesForSelectedCountry: 5
+dynamicCities:
+  enabled: false
+  current: []
+  previousBatch: []
 visualizations:
   charts:
     equatorChart:
