--- a/city-api/apis/requirements.txt
+++ b/city-api/apis/requirements.txt
@@ -2,3 +2,10 @@ plotly==5.22.0
 cufflinks==0.17.3
 kaleido==0.2.1
 psycopg2-binary==2.9.9
+fastapi==0.68.0
+uvicorn==0.15.0
+requests==2.26.0
+python-dotenv==0.19.0
+pyyaml==5.4.1
+docker==5.0.0
+kafka-python==2.0.2
