Read new cities in kafka-producer container

--- a/configuration.yml
+++ b/configuration.yml
@@ -31,7 +31,12 @@ dynamicCities:
   - Uppsala
   - "V\xE4ster\xE5s"
   enabled: true
-  previousBatch: []
+  previousBatch:
+  - Stockholm
+  - Gothenburg
+  - "Malm\xF6"
+  - Uppsala
+  - "V\xE4ster\xE5s"
 services:
   cityApi:
     numberOfCitiesForSelectedCountry: 5
