Successfully update the list of dynamic cities, such that Kafka effectively produces these new cities combined with the default city list

--- a/configuration.yml
+++ b/configuration.yml
@@ -25,18 +25,18 @@ cities:
 - Juneau
 dynamicCities:
   current:
-  - Stockholm
-  - Gothenburg
-  - "Malm\xF6"
-  - Uppsala
-  - "V\xE4ster\xE5s"
+  - Seoul
+  - Busan
+  - Incheon
+  - Daegu
+  - Daejeon
   enabled: true
   previousBatch:
-  - Stockholm
-  - Gothenburg
-  - "Malm\xF6"
-  - Uppsala
-  - "V\xE4ster\xE5s"
+  - Madrid
+  - Madrid city
+  - Barcelona
+  - Barcelona City
+  - Valencia
 services:
   cityApi:
     numberOfCitiesForSelectedCountry: 5
