Wrap the timestamp refs around modulo to keep timestamps between fixed interval window

--- a/configuration.yml
+++ b/configuration.yml
@@ -25,18 +25,18 @@ cities:
 - Juneau
 dynamicCities:
   current:
-  - Riyadh
-  - Jeddah
-  - Mecca
-  - Medina
-  - Sultanah
+  - Lisbon
+  - Sintra
+  - Vila Nova de Gaia
+  - Porto city
+  - Porto
   enabled: true
   previousBatch:
-  - Melbourne
-  - Sydney
-  - Brisbane
-  - Perth
-  - Adelaide
+  - Paris
+  - Marseille
+  - Lyon
+  - Toulouse
+  - Nice
 services:
   cityApi:
     numberOfCitiesForSelectedCountry: 5
