Progress for integrating GIPHY API

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ WEATHER_API_KEY=your_api_key_here
 
 # Get your API key from https://rapidapi.com/wirefreethought/api/geodb-cities
 GEODB_CITIES_API_KEY=your_api_key_here
+
+# Get your API key from https://developers.giphy.com/
+GIPHY_API_KEY=your_api_key_here
