Connect services to transfer GIPHY video link of capital city

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -167,6 +167,7 @@ services:
       - PYTHONPATH=/app/city-api
       - GEODB_CITIES_API_KEY=${GEODB_CITIES_API_KEY}
       - WEATHER_API_KEY=${WEATHER_API_KEY}
+      - GIPHY_API_KEY=${GIPHY_API_KEY}
     networks:
       - app_network
 
