--- a/configuration.yml
+++ b/configuration.yml
@@ -27,13 +27,13 @@ cities:
 - Tijuana
 dynamicCities:
   current:
-  - Stockholm
-  - Gothenburg
-  - "Malm\xF6"
-  - Uppsala
-  - "V\xE4ster\xE5s"
-  - "\xD6rebro"
-  - "Link\xF6ping"
+  - Tokyo
+  - Yokohama
+  - Osaka
+  - Nagoya
+  - Sapporo
+  - Sapporo
+  - Fukuoka
   enabled: true
   previousBatch:
   - Tokyo
