Add automated generation for city descriptions using gpt-model-3.5

--- a/city-api/country-capital-config/city-video-mapping.json
+++ b/city-api/country-capital-config/city-video-mapping.json
@@ -1,4 +1,5 @@
 {
     "Sweden, Stockholm": "Link here",
-    "Spain, Madrid": "Link here"
+    "Spain, Madrid": "https://giphy.com/gifs/NoPotSer-STqk2oEYggjtBxcsbm",
+    "Czech Republic, Prague": "https://giphy.com/gifs/people-city-view-UKTvT1xdvhcOI"
 }
