Display customized color gradient for equator chart

--- a/configuration.yml
+++ b/configuration.yml
@@ -57,9 +57,9 @@ visualizations:
   charts:
     equatorChart:
       displayActualTrend: false
-      displayLinearTrend: true
+      displayLinearTrend: false
       displayLogarithmicTrend: false
       pngOutput: false
   queryConfig:
-    queryAttribute: timeZoneOffset
-    queryRequirement: UTC+1
+    queryAttribute: continent
+    queryRequirement: Europe
