Fix issues for linear trend line

--- a/city-api/Dockerfile
+++ b/city-api/Dockerfile
@@ -31,7 +31,8 @@ RUN pip install --no-cache-dir \
     fastapi \
     uvicorn \
     statsmodels \
-    scipy
+    scipy \
+    numpy
 
 # Create necessary directories
 RUN mkdir -p \
