--- a/configuration.yml
+++ b/configuration.yml
@@ -61,5 +61,5 @@ visualizations:
       displayLogarithmicTrend: true
       pngOutput: false
   queryConfig:
-    queryAttribute: timeZoneOffset
-    queryRequirement: UTC+0
+    queryAttribute: continent
+    queryRequirement: Asia
