--- a/configuration.yml
+++ b/configuration.yml
@@ -27,22 +27,22 @@ cities:
 - Tijuana
 dynamicCities:
   current:
-  - Stockholm
-  - Gothenburg
-  - "Malm\xF6"
-  - Uppsala
-  - "V\xE4ster\xE5s"
-  - "\xD6rebro"
-  - "Link\xF6ping"
+  - Tokyo
+  - Yokohama
+  - Osaka
+  - Nagoya
+  - Fukuoka
+  - Kawasaki
+  - Kobe
   enabled: true
   previousBatch:
-  - Stockholm
-  - Gothenburg
-  - "Malm\xF6"
-  - Uppsala
-  - "V\xE4ster\xE5s"
-  - "\xD6rebro"
-  - "Link\xF6ping"
+  - Tokyo
+  - Yokohama
+  - Osaka
+  - Nagoya
+  - Fukuoka
+  - Kawasaki
+  - Kobe
 services:
   cityApi:
     numberOfCitiesForSelectedCountry: 7
@@ -56,10 +56,10 @@ services:
 visualizations:
   charts:
     equatorChart:
-      displayActualTrend: true
-      displayLinearTrend: false
+      displayActualTrend: false
+      displayLinearTrend: true
       displayLogarithmicTrend: true
       pngOutput: false
   queryConfig:
     queryAttribute: continent
-    queryRequirement: Atlantic
+    queryRequirement: Europe
