--- a/configuration.yml
+++ b/configuration.yml
@@ -27,22 +27,22 @@ cities:
 - Tijuana
 dynamicCities:
   current:
-  - New York City
-  - Los Angeles
-  - Chicago
-  - Brooklyn
-  - Queens
-  - Houston
-  - Kansas City metropolitan area
+  - Bangkok
+  - Bangkok
+  - Chiang Mai
+  - Phrae
+  - Nonthaburi
+  - Sai Mai
+  - Khlong Sam Wa
   enabled: true
   previousBatch:
-  - New York City
-  - Los Angeles
-  - Chicago
-  - Brooklyn
-  - Queens
-  - Houston
-  - Kansas City metropolitan area
+  - Bangkok
+  - Bangkok
+  - Chiang Mai
+  - Phrae
+  - Nonthaburi
+  - Sai Mai
+  - Khlong Sam Wa
 services:
   cityApi:
     numberOfCitiesForSelectedCountry: 7
